Fixed spacing issue on html

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -72,8 +72,7 @@ body {
 }
 
 .card {
-  transition: 0.7s;
-  
+  transition: 0.7s; 
 }
 
 /* Hover effect on projects, only on devices with pointer */
@@ -98,7 +97,7 @@ a:hover, a:focus {
 }
 
 /* Background color for text portion of the card body with my projects */
-.card-body {
+.card-body, .project-highlight {
   background: #7ebdb4 !important;
 }
 
